--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <body>
     <h1>This is a header</h1>
+    <h2>Another header</h2>
+    <p>This is a paragraph.</p>
+    <p>This is another paragraph.</p>
 </body>
